# Created
- getUser @ AuthContext.tsx

# Refactored
- No userId detected error handler in getUser @ dashboard/index.tsx 

# Imported